# dyor_agent

./: .env.template  .gitignore  README.md  adev_config.yaml  dyor_fsm.mmd  dyor_fsm.yaml  pyproject.toml
.github/workflows/: common_check.yaml
docker_envs/: alembic.ini  docker-compose.yaml
docker_envs/migrations/: env.py
docker_envs/migrations/versions/: 334e4181ae22_add_report_scores.py  6350033965fa_add_scraped_data_table.py  8e322c6e38bb_add_reports_table.py  ae204aef849a_add_report_id_to_triggers.py  d602b547996a_initial_schema.py
docker_envs/models/: __init__.py
report_data_jsons/: ecotoken_report.json
scripts/: DYOR_COMPARISON_GUIDE.md  QUICK_START.md  README.md  USAGE.md  sample_renew_report_output.txt  test_prompt_template.py  test_prompt_template_backup.py
scripts/report_data_jsons/: ecotoken_report.json  sample_renew_report.json
scripts/report_data_llm_output/evaluations/: EVALUATION_SUMMARY_20250708_205119.md  quality_evaluations_20250708_205119.json  template_comparisons_20250708_205119.json
scripts/report_data_llm_output/new_template/: ECO_new_template_anthropic_claude_3_5_sonnet_20241022.md  ECO_new_template_openai_gpt_4o.md
scripts/report_data_llm_output/old_template/: ECO_old_template_anthropic_claude_3_5_sonnet_20241022.md  ECO_old_template_openai_gpt_4o.md
scripts/report_data_template_filled/new_template/: ECO_new_template.txt  RENEW_new_template.txt
scripts/report_data_template_filled/old_template/: ECO_old_template.txt  RENEW_old_template.txt
