[tool.poetry]
name = "dyor_agent"
version = "0.1.0"
description = ""
authors = ["xiuxiuxar"]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
open-aea-ledger-solana = "==1.65.0"
open-aea-ledger-cosmos = "==1.65.0"
open-aea-ledger-ethereum = "==1.65.0"
open-aea = "==1.65.0"
open-aea-cli-ipfs = "==1.65.0"
open-aea-test-autonomy = "==0.19.5"
open-autonomy = "==0.19.5"
autonomy-dev = {extras = ["all"], version = ">=0.2.64,<=0.2.149"}
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.10"
alembic = "^1.15.2"
openai = "^1.77.0"
markdown = "^3.8"
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0", "setuptools"]
